# kuro

./: .env.example  .gitignore  CONTEXT.md  README.md  brand.md
agent/: package-lock.json  package.json  railway.toml  tsconfig.json
agent/src/: _bootstrap.ts  agent.ts  cli.ts  config.ts
agent/src/autonomous/: decider.ts  loop.ts  policy.ts  positions.ts
agent/src/backtest/: index.ts  launches.ts  report.ts  sim_decider.ts  simulator.ts  trades.ts  types.ts
agent/src/brain/: anthropic.ts  cache.ts  codex.ts  index.ts  oneshot.ts  openai.ts  providers.ts  run.ts  signals.ts  types.ts
agent/src/brain/agents/: dev_wallet.ts  (+1 more)
agent/src/data/: birdeye.ts  dexscreener.ts  executor.ts  gmgn.ts  jupiter.ts  phoenix.ts  solana.ts  zerion.ts
agent/src/skills/: analyze_token.ts  enrich_wallet.ts  execute_arb.ts  find_arb.ts  gmgn_signal.ts  index.ts  phoenix_markets.ts  phoenix_open_perp.ts  phoenix_signal.ts  phoenix_trader.ts  snipe.ts  types.ts
agent/src/watcher/: pool_watcher.ts
docs/: architecture-opportunities.md  brain-speed-roadmap.md  index.md  key-management.md  kuro-minara-roadmap.md  live-api.md  minara-landscape.html  minara-research.md  monetization.md  positioning.md  production.md
docs/adr/: 0006-brain-speed-three-tier-cache.md  README.md
executor/: .dockerignore  Cargo.toml  Dockerfile  railway.toml
executor/src/: api.rs  blockhash.rs  config.rs  jito.rs  jupiter.rs  main.rs  risk.rs  types.rs  wallet.rs
site/: README.md  app.js  index.html  styles.css
skills/kuro/: SKILL.md
skills/kuro/references/: analyze.md  autonomous.md  phoenix.md
