[package]
name = "kuro-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
solana-sdk = "1.18"
solana-client = "1.18"
bs58 = "0.5"
bincode = "1.3"
base64 = "0.22"
dotenvy = "0.15"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
